--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ futures-executor = { version = "0.3.31", default-features = false, features = ["
 futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
 getrandom = { version = "0.2.15", default-features = false }
 gloo-timers = { version = "0.3.0", default-features = false }
+gloo-utils = { version = "0.2.0", default-features = false, features = ["serde"] }
 growable-bloom-filter = { version = "2.1.1", default-features = false }
 hkdf = { version = "0.12.4", default-features = false }
 hmac = { version = "0.12.1", default-features = false }
@@ -110,6 +111,7 @@ tracing-appender = { version = "0.2.3", default-features = false }
 tracing-core = { version = "0.1.34", default-features = false }
 tracing-subscriber = { version = "0.3.20", default-features = false, features = ["std", "smallvec", "fmt"] }
 unicode-normalization = { version = "0.1.25", default-features = false }
+unicode-segmentation = { version = "1.12.0", default-features = false }
 uniffi = { version = "0.31.0", default-features = false }
 uniffi_bindgen = { version = "0.31.0", default-features = false }
 url = { version = "2.5.7", default-features = false }
