--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -31,7 +31,7 @@ experimental-encrypted-state-events = [
 async-trait.workspace = true
 base64.workspace = true
 futures-util.workspace = true
-gloo-utils = { version = "0.2.0", features = ["serde"] }
+gloo-utils.workspace = true
 growable-bloom-filter = { workspace = true, optional = true }
 hkdf.workspace = true
 indexed_db_futures = { workspace = true, features = [
@@ -47,7 +47,7 @@ matrix-sdk-store-encryption.workspace = true
 rmp-serde.workspace = true
 ruma.workspace = true
 serde.workspace = true
-serde-wasm-bindgen = "0.6.5"
+serde-wasm-bindgen = { version = "0.6.5", default-features = false }
 serde_json.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
