--- a/crates/matrix-sdk/Cargo.toml
+++ b/crates/matrix-sdk/Cargo.toml
@@ -83,7 +83,7 @@ experimental-element-recent-emojis = ["matrix-sdk-base/experimental-element-rece
 
 [dependencies]
 anyhow = { workspace = true, optional = true }
-anymap2 = "0.13.0"
+anymap2 = { version = "0.13.0", default-features = false }
 aquamarine.workspace = true
 as_variant.workspace = true
 assert_matches2 = { workspace = true, optional = true }
@@ -92,9 +92,9 @@ async-stream.workspace = true
 async-trait.workspace = true
 async-once-cell.workspace = true
 axum = { version = "0.8.4", optional = true }
-bytes = "1.11.1"
-bytesize = "2.3.0"
-cfg-if = "1.0.4"
+bytes = { version = "1.11.1", default-features = false, features = ["std"] }
+bytesize = { version = "2.3.0", default-features = false, features = ["std"] }
+cfg-if.workspace = true
 event-listener = "5.4.1"
 eyeball.workspace = true
 eyeball-im.workspace = true
