--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@ pin-project-lite = { version = "0.2.16", default-features = false }
 proc-macro2 = { version = "1.0.106", default-features = false }
 proptest = { version = "1.6.0", default-features = false, features = ["std"] }
 quote = { version = "1.0.37", default-features = false }
-rand = { version = "0.8.5", default-features = false }
+rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
 regex = { version = "1.12.2", default-features = false }
 reqwest = { version = "0.12.24", default-features = false }
 rmp-serde = { version = "1.3.0", default-features = false }
