--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ reqwest = { version = "0.12.24", default-features = false }
 rmp-serde = { version = "1.3.0", default-features = false }
 ruma = { git = "https://github.com/ruma/ruma", rev = "289bee87974bd3c2ad14a6c15801c80b683b67dc", features = [
     "client-api-c",
+    "compat-unset-avatar",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
     "compat-tag-info",
