--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ reqwest = { version = "0.12.24", default-features = false }
 rmp-serde = "1.3.0"
 ruma = { git = "https://github.com/ruma/ruma", rev = "d4f29e2a70dbfb0bd4fdb839ca4629794644ba97", features = [
     "client-api-c",
+    "compat-unset-avatar",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
     "compat-tag-info",
