Handle LiveKit room events for E2EE key resend

--- a/crates/matrix-sdk-rtc-livekit/Cargo.toml
+++ b/crates/matrix-sdk-rtc-livekit/Cargo.toml
@@ -26,6 +26,7 @@ matrix-sdk.workspace = true
 matrix-sdk-rtc.workspace = true
 matrix-sdk-crypto = { workspace = true, optional = true }
 thiserror.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
