--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ rand = { version = "0.8.5", default-features = false, features = ["std", "std_rn
 regex = { version = "1.12.2", default-features = false }
 reqwest = { version = "0.12.24", default-features = false }
 rmp-serde = { version = "1.3.0", default-features = false }
-ruma = { git = "https://github.com/ruma/ruma", rev = "289bee87974bd3c2ad14a6c15801c80b683b67dc", features = [
+ruma = { git = "https://github.com/ruma/ruma", rev = "43d940f79847e7ff1443266a84591f049018830d", features = [
     "client-api-c",
     "compat-unset-avatar",
     "compat-upload-signatures",
@@ -113,7 +113,7 @@ tracing-core = { version = "0.1.34", default-features = false }
 tracing-subscriber = { version = "0.3.20", default-features = false, features = ["std", "smallvec", "fmt"] }
 unicode-normalization = { version = "0.1.25", default-features = false }
 unicode-segmentation = { version = "1.12.0", default-features = false }
-uniffi = { version = "0.31.0", default-features = false, features = ["cargo-metadata"] }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "e5f4821410bea19e71984ea5e06a7bc8b11ed9e5", default-features = false, features = ["cargo-metadata"] }
 uniffi_bindgen = { version = "0.31.0", default-features = false, features = ["cargo-metadata"] }
 url = { version = "2.5.7", default-features = false }
 uuid = { version = "1.18.1", default-features = false }
