--- a/bindings/matrix-sdk-ffi/Cargo.toml
+++ b/bindings/matrix-sdk-ffi/Cargo.toml
@@ -88,6 +88,7 @@ ruma = { workspace = true, features = [
     "unstable-msc2545",
     # Room language event type
     "unstable-msc4334",
+    "unstable-uniffi",
 ] }
 serde.workspace = true
 serde_json.workspace = true
