add support for pushing secrets and receiving secret pushes
see MSC4385

--- a/crates/matrix-sdk-crypto/Cargo.toml
+++ b/crates/matrix-sdk-crypto/Cargo.toml
@@ -40,6 +40,10 @@ test-send-sync = []
 # Testing helpers for implementations based upon this
 testing = ["matrix-sdk-test"]
 
+# Enable experimental support for pushing secrets; see
+# https://github.com/matrix-org/matrix-spec-proposals/pull/4385
+experimental-push-secrets = []
+
 [dependencies]
 aes = { version = "0.8.4", default-features = false }
 aquamarine.workspace = true
