--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 ]
 exclude = ["testing/data"]
 # xtask, testing and the bindings should only be built when invoked explicitly.
-default-members = ["benchmarks", "crates/*", "labs/*"]
+default-members = ["benchmarks", "crates/*"]
 resolver = "3"
 
 [workspace.package]
