refactor(test): remove `StateTestEvent::EncryptionWithEncryptedStateEvents`

--- a/crates/matrix-sdk/Cargo.toml
+++ b/crates/matrix-sdk/Cargo.toml
@@ -56,7 +56,8 @@ experimental-send-custom-to-device = ["e2e-encryption", "matrix-sdk-base/experim
 experimental-encrypted-state-events = [
     "e2e-encryption",
     "matrix-sdk-base/experimental-encrypted-state-events",
-    "matrix-sdk-sqlite/experimental-encrypted-state-events"
+    "matrix-sdk-sqlite/experimental-encrypted-state-events",
+    "matrix-sdk-test?/experimental-encrypted-state-events",
 ]
 
 markdown = ["ruma/markdown"]
