fixup! refactor: don't build the benchmarks by default either

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -94,6 +94,5 @@ jobs:
       - name: Run the benchmarks
         uses: CodSpeedHQ/action@4deb3275dd364fb96fb074c953133d29ec96f80f
         with:
-          run: cargo codspeed run
-          mode: "instrumentation"
+          mode: "simulation"
           token: ${{ secrets.CODSPEED_TOKEN }}
