Revert "refactor: don't build the benchmarks by default either"
This reverts commit 66ea5d990d38115b47efaaebdfe7f4a518951bc5.

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -94,5 +94,6 @@ jobs:
       - name: Run the benchmarks
         uses: CodSpeedHQ/action@4deb3275dd364fb96fb074c953133d29ec96f80f
         with:
-          mode: "simulation"
+          run: cargo codspeed run
+          mode: "instrumentation"
           token: ${{ secrets.CODSPEED_TOKEN }}
