--- a/crates/matrix-sdk/Cargo.toml
+++ b/crates/matrix-sdk/Cargo.toml
@@ -117,6 +117,7 @@ matrix-sdk-test = { workspace = true, optional = true }
 mime.workspace = true
 mime2ext = "0.1.54"
 oauth2.workspace = true
+oauth2-reqwest.workspace = true
 once_cell.workspace = true
 percent-encoding = "2.3.2"
 pin-project-lite.workspace = true
