Test `Arc<str>` identifiers storage
Signed-off-by: Kévin Commaille <zecakeh@tedomum.fr>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,6 +8,9 @@ crates-io = "https://docs.rs/"
 [unstable]
 rustdoc-map = true
 
+[target.'cfg(all())']
+rustflags = ["--cfg", "ruma_identifiers_storage=\"Arc\""]
+
 [target.aarch64-linux-android]
 # These rust flags improve the performance on Android on arm64
 rustflags = ["-C", "target-feature=+neon,+aes,+sha2,+sha3,+pmuv3"]
