--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,7 +9,7 @@ crates-io = "https://docs.rs/"
 rustdoc-map = true
 
 [target.'cfg(all())']
-rustflags = ["--cfg", "ruma_identifiers_storage=\"Arc\""]
+rustflags = ["--cfg", "ruma_identifiers_storage=\"ArcStr\""]
 
 [target.aarch64-linux-android]
 # These rust flags improve the performance on Android on arm64
