Test `SmallVec` identifiers storage
Signed-off-by: Kévin Commaille <zecakeh@tedomum.fr>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,12 +157,14 @@ box_default = "allow"
 cloned_instead_of_copied = "warn"
 dbg_macro = "warn"
 inefficient_to_string = "warn"
+large_enum_variant = "allow"
 macro_use_imports = "warn"
 manual_let_else = "warn"
 mut_mut = "warn"
 needless_borrow = "warn"
 nonstandard_macro_braces = "warn"
 redundant_clone = "warn"
+result_large_err = "allow"
 str_to_string = "warn"
 todo = "warn"
 unnecessary_semicolon = "warn"
