chore(deps): remove dependency on aws-lc-rs
Signed-off-by: Michael Goldenberg <m@mgoldenberg.net>

--- a/crates/matrix-sdk/Cargo.toml
+++ b/crates/matrix-sdk/Cargo.toml
@@ -33,7 +33,12 @@ e2e-encryption = [
     # activate on indexeddb if given
     "matrix-sdk-indexeddb?/e2e-encryption",
 ]
-js = ["matrix-sdk-common/js", "matrix-sdk-base/js"]
+js = [
+    "matrix-sdk-common/js",
+    "matrix-sdk-base/js",
+    "rustls-pki-types?/web",
+    "ring?/wasm32_unknown_unknown_js"
+]
 
 sqlite = [
     "dep:matrix-sdk-sqlite",
@@ -62,7 +67,7 @@ experimental-encrypted-state-events = [
 
 markdown = ["ruma/markdown"]
 native-tls = ["reqwest/native-tls"]
-rustls-tls = ["reqwest/rustls"]
+rustls-tls = ["reqwest/rustls-no-provider", "dep:rustls", "dep:rustls-pki-types", "dep:ring"]
 socks = ["reqwest/socks"]
 local-server = ["dep:axum", "dep:rand", "dep:tower"]
 sso-login = ["local-server"]
@@ -122,6 +127,7 @@ oauth2-reqwest.workspace = true
 percent-encoding = "2.3.2"
 pin-project-lite.workspace = true
 rand = { workspace = true, optional = true }
+ring = { workspace = true, optional = true }
 ruma = { workspace = true, features = [
     "rand",
     "unstable-msc2448",
@@ -132,6 +138,8 @@ ruma = { workspace = true, features = [
     "unstable-msc4108",
     "unstable-msc4278",
 ] }
+rustls = { workspace = true, optional = true, features = ["std", "logging"] }
+rustls-pki-types = { workspace = true, optional = true }
 serde.workspace = true
 serde_html_form.workspace = true
 serde_json.workspace = true
@@ -180,6 +188,7 @@ tokio-test = "0.4.4"
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 [target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
+ctor = "0.2.9"
 proptest.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 wiremock.workspace = true
