--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ quote = { version = "1.0.37", default-features = false }
 rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
 regex = { version = "1.12.2", default-features = false }
 reqwest = { version = "0.13.1", default-features = false }
+ring = { version = "0.17.14", default-features = false }
 rmp-serde = { version = "1.3.0", default-features = false }
 ruma = { git = "https://github.com/ruma/ruma", rev = "289bee87974bd3c2ad14a6c15801c80b683b67dc", features = [
     "client-api-c",
@@ -94,6 +95,8 @@ ruma = { git = "https://github.com/ruma/ruma", rev = "289bee87974bd3c2ad14a6c158
     "unstable-msc4308",
     "unstable-msc4310",
 ] }
+rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
+rustls-pki-types = { version = "1.14.0", default-features = false }
 sentry = { version = "0.46.0", default-features = false }
 sentry-tracing = { version = "0.46.0", default-features = false }
 serde = { version = "1.0.228", default-features = false, features = ["std", "rc", "derive"] }
