--- a/examples/qr-login/Cargo.toml
+++ b/examples/qr-login/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 publish = false
 license = "Apache-2.0"
+rust-version.workspace = true
 
 [package.metadata.release]
 release = false
