ci: Enable the MSRV check for all of our crates

--- a/.github/workflows/msrv.yaml
+++ b/.github/workflows/msrv.yaml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - uses: taiki-e/install-action@cargo-hack
-    - run: cargo hack check --rust-version --workspace --all-targets --ignore-private
+    - run: cargo hack check --rust-version --workspace --all-targets
