fix(ffi-macros): Fix compilation in case we only build this single crate

--- a/bindings/matrix-sdk-ffi-macros/Cargo.toml
+++ b/bindings/matrix-sdk-ffi-macros/Cargo.toml
@@ -17,9 +17,9 @@ test = false
 doctest = false
 
 [dependencies]
-proc-macro2.workspace = true
+proc-macro2 = { workspace = true , features = ["proc-macro"] }
 quote.workspace = true
-syn = { workspace = true, features = ["full", "extra-traits"] }
+syn = { workspace = true, features = ["full", "extra-traits", "proc-macro"] }
 
 [lints]
 workspace = true
