Gate aquamarine behind doc/docsrs target and feature
Signed-off-by: Jakub Panek <me@panekj.dev>

--- a/crates/matrix-sdk-crypto/Cargo.toml
+++ b/crates/matrix-sdk-crypto/Cargo.toml
@@ -12,6 +12,7 @@ rust-version = { workspace = true }
 version = "0.16.0"
 
 [package.metadata.docs.rs]
+features = ["docsrs"]
 rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
 
 [features]
@@ -32,6 +33,8 @@ experimental-algorithms = []
 uniffi = ["dep:uniffi"]
 _disable-minimum-rotation-period-ms = []
 
+docsrs = ["dep:aquamarine"]
+
 # Private feature, see
 # https://github.com/matrix-org/matrix-rust-sdk/pull/3749#issuecomment-2312939823 for the gory
 # details.
@@ -42,7 +45,6 @@ testing = ["matrix-sdk-test"]
 
 [dependencies]
 aes = { version = "0.8.4", default-features = false }
-aquamarine.workspace = true
 as_variant.workspace = true
 async-trait.workspace = true
 bs58 = { version = "0.5.1", default-features = false, features = ["std"] }
@@ -77,6 +79,9 @@ uniffi = { workspace = true, optional = true }
 url.workspace = true
 vodozemac.workspace = true
 zeroize = { workspace = true, features = ["zeroize_derive"] }
+
+[target.'cfg(any(doc, docsrs))'.dependencies]
+aquamarine = { workspace = true, optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 tokio = { workspace = true, features = ["time"] }
